2013-07-05  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mcs-20.el: Really check whether the mule-vesion variable is defined.

2013-07-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el: Check whether the mule-vesion variable is defined.
	Cf. https://github.com/ikazuhiro/apel/commit/328c02e022340b36dd7e5f9250c7f86d2bafd793

2013-03-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (mime-charset-to-coding-system): Display the message
	and use charset name as coding system when
	`mime-charset-coding-system-alist' indicates invalid coding
	system.

2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset): Coding system's
	setting is preferred to mime-charset-coding-system-alist's value.
	Detect MIME name from mime-charset-coding-system-alist's value
	more permissively.

2012-08-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* poe.el (next-command-event): Fix that Emacs 21 and later were
	treated as 'Emacs 19, 20.1 and 20.2'.

2012-07-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (charsets-mime-charset-alist): Do not use
	`iso-2022-jp-2'.

2012-07-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-string): (Emacs23 and later) New
	function.
	(detect-mime-charset-region): Use it.

2012-04-27  MORIOKA Tomohiko  <tomo.git@chise.org>

	* README.en, README.ja (Download): Renamed from "Anonymous FTP";
	modify for http://git.chise.org/elisp/dist/apel/.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja (MAKEIT.BAT): Modify for apel-ja@lists.chise.org.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en: Remove descriptions about CVS and add
	description about the new Git repository.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.en (make.bat (for MS-DOS family)): Modify for
	apel-en@lists.chise.org.

2012-04-26  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Bug reports): Modify for